2004-09-01 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/gen.c (genPackBits): added operand right in function
	parameters, load result directly if p_type is POINTER (that is
	called by genNearPointerSet)
	* (genUnPackBits): added operand left in function parameters,
	* (genNearPointerGet, genNearPointerSet): prevent the loading of
	FSR0 if accessing bitfields,

2004-08-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdio.h: added NULL, size_t, typedef pfn_outputchar,
	  _print_format; updated printf, sprintf, vsprintf
	* device/include/asm/default/features.h: corrected comment/define
	* device/lib/Makefile.in: added sprintf.c
	* device/lib/libsdcc.lib: added sprintf module
	* device/lib/printf_large.c,
	* device/lib/vprintf.c,
	* device/lib/sprintf.c: totally refactored printf_large and vprintf
	  into these 3 files
	* support/regression/Makefile: changed ALL_PORTS into a usefull default
	* support/regression/ports/mcs51-stack-auto/spec.mk: added sprintf
	* support/regression/tests/bug-927659.c: removed dummy putchar, enabled
	  hc08 test
	* support/regression/tests/zeropad.c: define idata as data for hc08

2004-08-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCpeeph.c (labelIsReturnOnly): support hc08 rts opcode also
	* src/SDCCpeeph.c (buildLabelRefCountHash): assume function entry point
	labels are referenced at least once (even if a reference is not found)
	* src/hc08/gen.c (emitcode): set isComment flag for comments
	* src/hc08/peeph.def: added rules 5a..5f (optimize redundant immediate
	loads), rules 6a..6b (optimize jumps to return)

2004-08-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/acosf.c (acosf),
	* device/lib/asinf.c (asinf),
	* device/lib/atanf.c (atanf),
	* device/lib/ceilf.c (ceilf),
	* device/lib/cosf.c (cosf),
	* device/lib/coshf.c (coshf),
	* device/lib/cotf.c (cotf),
	* device/lib/fabsf.c (fabsf),
	* device/lib/floorf.c (floorf),
	* device/lib/log10f.c (log10f),